// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polishers safeValues integration 1`] = `
Object {
  "array": Array [
    Object {
      "fox": "***",
    },
    Object {
      "sox": "123",
    },
  ],
  "bar": "bar",
  "my": Object {
    "deep": Object {
      "poem": "foo",
    },
  },
  "withConstant": Object {
    "ans": 42,
    "bar": Array [
      "b",
      "a",
      "r",
    ],
    "baz": "***",
    "quix": "abcd***wxyz",
  },
}
`;

exports[`polishers values integration 1`] = `
Object {
  "array": Array [
    Object {
      "fox": 123,
    },
    Object {
      "sox": "123",
    },
  ],
  "bar": "bar",
  "my": Object {
    "deep": Object {
      "poem": "foo",
    },
  },
  "withConstant": Object {
    "ans": 42,
    "bar": Array [
      "b",
      "a",
      "r",
    ],
    "baz": 123,
    "quix": "abcdefghijklmnopqrstuvwxyz",
  },
}
`;
